force-app/main/default/objects/CEMS_Personnel__c/CEMS_Personnel__c.object-meta.xml
<CustomObject>
    <label>Personnel</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnel</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>