force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Applicant_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Applicant ID</label>
    <type>AutoNumber</type>
</CustomField>