force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Bench__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Bench__c</fullName>
    <label>Bench</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>