force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Board_Of_Qualification__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Board_Of_Qualification__c</fullName>
    <label>Board Of Qualification</label>
    <length>30</length>
    <type>Text</type>
</CustomField>