force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_CGPA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CEMS_CGPA_Percentage__c</fullName>
    <label>CGPA / Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>