force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Contact_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>