force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Current_Salary__c</fullName>
    <label>Current Salary</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>