force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>