force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Education__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Education__c</fullName>
    <label>Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>