force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>