force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Experience__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Experience__c</fullName>
    <label>Work Experience</label>
    <length>30</length>
    <type>Text</type>
</CustomField>