force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Highest_Degree__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Highest_Degree__c</fullName>
    <label>Highest Degree</label>
    <length>30</length>
    <type>Text</type>
</CustomField>