force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Joined_Date__c</fullName>
    <label>Joined Date</label>
    <type>Date</type>
</CustomField>