force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>