force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Personal_Email__c</fullName>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>