force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Please_Upload_Resume__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Please_Upload_Resume__c</fullName>
    <label>Please Upload Resume</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>