force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Position__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>CEMS_Job_Opening__c</referenceTo>
    <relationshipLabel>Personnel</relationshipLabel>
    <relationshipName>Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>