force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CEMS_Personnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Personnel (Project Manager)</relationshipLabel>
    <relationshipName>Personnel2</relationshipName>
    <type>Lookup</type>
</CustomField>