force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Rating__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Rating__c</fullName>
    <label>Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>