force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Recruiting_Manager__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Recruiting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Manager</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Personnel (Recruiting Manager)</relationshipLabel>
    <relationshipName>Personnel5</relationshipName>
    <type>Lookup</type>
</CustomField>