force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Required_Documents_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Required_Documents_to_Upload__c</fullName>
    <label>Required Documents to Upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSC/Class X</fullName>
            </value>
            <value>
                <fullName>Intermediate/Higher Secondary</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s/Under Graduation</fullName>
            </value>
            <value>
                <fullName>Master / Post Graduation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>