force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Roles__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Roles__c</fullName>
    <label>Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>