force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Type__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Contract/Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>