force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>