force-app/main/default/objects/CEMS_Personnel__c/fields/CEMS_Years_Of_Experience__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Years_Of_Experience__c</fullName>
    <label>Years Of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>