force-app/main/default/objects/CEMS_Personnel__c/fields/CEMSAddress__c.field-meta.xml
<CustomField>
    <fullName>CEMSAddress__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>