force-app/main/default/objects/CEMS_Personnel__c/recordTypes/Applicant.recordType-meta.xml
<RecordType>
    <fullName>Applicant</fullName>
    <active>true</active>
    <label>Applicant</label>
</RecordType>