force-app/main/default/objects/CEMS_Personnel__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <label>Employee</label>
</RecordType>